third_party/rust_crates/forks/pin-init/tests/ui/compile-fail/pinned_drop/unexpected_generics.stderr
error: unexpected arguments for `PinnedDrop` path
  --> tests/ui/compile-fail/pinned_drop/unexpected_generics.rs:10:19
   |
10 | impl<T> PinnedDrop<T> for Foo<T> {
   |                   ^^^
